[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Aliens.gd" type="Script" id=1]
[ext_resource path="res://Sound/fastinvader4.wav" type="AudioStream" id=2]
[ext_resource path="res://Sound/fastinvader1.wav" type="AudioStream" id=3]
[ext_resource path="res://Sound/fastinvader2.wav" type="AudioStream" id=4]
[ext_resource path="res://Sound/fastinvader3.wav" type="AudioStream" id=5]

[node name="Aliens" type="Node" groups=[
"Aliens",
]]
script = ExtResource( 1 )

[node name="Alien_Start_Position" type="Position2D" parent="."]
position = Vector2( 10, 40 )

[node name="InvSnd" type="Node" parent="."]

[node name="InvSnd1" type="AudioStreamPlayer" parent="InvSnd"]
stream = ExtResource( 2 )
pitch_scale = 0.9

[node name="InvSnd2" type="AudioStreamPlayer" parent="InvSnd"]
stream = ExtResource( 3 )
pitch_scale = 0.9

[node name="InvSnd3" type="AudioStreamPlayer" parent="InvSnd"]
stream = ExtResource( 4 )
pitch_scale = 0.9

[node name="InvSnd4" type="AudioStreamPlayer" parent="InvSnd"]
stream = ExtResource( 5 )
pitch_scale = 0.9

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
